--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon</title>
 </head>
 
 <body>
-    <header class="header">
+    <!--navigation-->
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
+                    <!--anchor element-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
